# tynavi

./: AGENTS.md  Cargo.toml  README.md
changelogs/: 2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md
macros/: Cargo.toml
macros/docs/: impl.md  selector.md
macros/src/: lib.rs  selector.rs
src/: error.rs  lib.rs  macros.rs  selector.rs  traits.rs
src/selector/: extension.rs  hash_map.rs  number.rs  option.rs  ptr.rs  result.rs  string.rs  vec.rs
src/selector/extension/axum/: mod.rs
src/selector/extension/http/: mod.rs
src/selector/extension/reqwest/: mod.rs
src/selector/extension/serde_json/: map.rs  mod.rs
src/selector/extension/tungstenite/: mod.rs
src/selector/number/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/selector/traits/: eq.rs  ord.rs
tests/: axum_selector.rs  derive_selector.rs  http_selector.rs  reqwest_selector.rs  serde_json_selector.rs  tungstenite_selector.rs
