[package]
name = "tynavi"
version = "0.1.2"
edition = "2024"
authors = ["Ecamika <index@ecamika.dev>"]
license = "MIT"
description = "An immutable selector library for navigating, filtering, and backtracking through deeply nested Rust data structures."

[dependencies]
axum = { version = "0.8", optional = true }
http = { version = "1.0", optional = true }
serde_json = { version = "1.0.150", optional = true }
tynavi-macros = { version = "0.1.0", path = "macros", optional = true }
tungstenite = { version = "0.29.0", optional = true }

[features]
axum = ["dep:axum"]
derive = ["dep:tynavi-macros"]
http = ["dep:http"]
serde_json = ["dep:serde_json"]
tungstenite = ["dep:tungstenite"]

full = ["derive", "serde_json", "tungstenite", "http", "axum"]

default = ["full"]
